fixed text overlap

--- a/static/styles.css
+++ b/static/styles.css
@@ -3,14 +3,6 @@ h1{
     width:100%;margin-top:0;margin-bottom:auto;line-height: 13px;font-size: 12px;
     text-align: center;
 }
-#submit{
-    background:url(../search-icon.png);
-    background-repeat: no-repeat;
-    border: 0;
-    line-height: 13px;
-    font-size: 12px;
-    margin-left: 30%;
-}
 .mytext{
     border:0;padding:10px;background:whitesmoke;
 }
@@ -21,7 +13,7 @@ h1{
     width:100%;margin-top:0;margin-bottom:auto;line-height: 13px;font-size: 12px;
 }
 .text > p:last-of-type{
-    width:100%;text-align:right;color:rgb(156, 30, 30);margin-bottom:-7px;margin-top:auto;
+    width:100%;text-align:right;color:rgb(156, 30, 30);margin-bottom:-5px;margin-top:auto;
 }
 .text-l{
     float:left;padding-right:10px;
@@ -46,7 +38,7 @@ h1{
 .msj{
     float:left;background:white;
 }
- nav ul{
+#override nav ul {
     overflow:hidden;
     overflow-y:scroll;
     max-height:90%;
@@ -59,8 +51,9 @@ h1{
 
 }
 .frame > div:last-of-type{
-    position:absolute;bottom:5px;width:100%;display:flex;
+    position:absolute;bottom:5px;width:100%;display:flex; padding: 0px;
 }
+
 ul {
     width:100%;
     list-style-type: none;
@@ -69,7 +62,6 @@ ul {
     bottom:32px;
     display:flex;
     flex-direction: column;
-
 }
 .msj:before{
     width: 0;
@@ -124,6 +116,7 @@ input:focus{
  user-select:none;
 }
 
+#override .frame {background-image: url("https://st.hzcdn.com/simgs/5a0190f305245cf6_4-7755/victorian-wallpaper.jpg");}
 #override h1 span { display:inline-block; animation:float .2s ease-in-out infinite; }
  @keyframes float {
   0%,100%{ transform:none; }
@@ -137,21 +130,28 @@ input:focus{
   50%{ transform:translateY(-20px) rotate(3deg) scale(1.1);  }
 }
 
+#override .msj-rta .macro {
+    margin: 10px;
+}
+#override ul{
+    margin-bottom: 27px;
+}
+
 #override span:nth-child(4n) { color:hsl(50, 75%, 55%); text-shadow:1px 1px hsl(50, 75%, 45%), 2px 2px hsl(50, 45%, 45%), 3px 3px hsl(50, 45%, 45%), 4px 4px hsl(50, 75%, 45%); }
 #override span:nth-child(4n-1) { color:hsl(135, 35%, 55%); text-shadow:1px 1px hsl(135, 35%, 45%), 2px 2px hsl(135, 35%, 45%), 3px 3px hsl(135, 35%, 45%), 4px 4px hsl(135, 35%, 45%); }
-span:nth-child(4n-2) { color:hsl(155, 35%, 60%); text-shadow:1px 1px hsl(155, 25%, 50%), 2px 2px hsl(155, 25%, 50%), 3px 3px hsl(155, 25%, 50%), 4px 4px hsl(140, 25%, 50%); }
-span:nth-child(4n-3) { color:hsl(30, 65%, 60%); text-shadow:1px 1px hsl(30, 45%, 50%), 2px 2px hsl(30, 45%, 50%), 3px 3px hsl(30, 45%, 50%), 4px 4px hsl(30, 45%, 50%); }
+#override span:nth-child(4n-2) { color:hsl(155, 35%, 60%); text-shadow:1px 1px hsl(155, 25%, 50%), 2px 2px hsl(155, 25%, 50%), 3px 3px hsl(155, 25%, 50%), 4px 4px hsl(140, 25%, 50%); }
+#override span:nth-child(4n-3) { color:hsl(30, 65%, 60%); text-shadow:1px 1px hsl(30, 45%, 50%), 2px 2px hsl(30, 45%, 50%), 3px 3px hsl(30, 45%, 50%), 4px 4px hsl(30, 45%, 50%); }
 
-h1 span:nth-child(2){ animation-delay:.05s; }
-h1 span:nth-child(3){ animation-delay:.1s; }
-h1 span:nth-child(4){ animation-delay:.15s; }
-h1 span:nth-child(5){ animation-delay:.2s; }
-h1 span:nth-child(6){ animation-delay:.25s; }
-h1 span:nth-child(7){ animation-delay:.3s; }
-h1 span:nth-child(8){ animation-delay:.35s; }
-h1 span:nth-child(9){ animation-delay:.4s; }
-h1 span:nth-child(10){ animation-delay:.45s; }
-h1 span:nth-child(11){ animation-delay:.5s; }
-h1 span:nth-child(12){ animation-delay:.55s; }
-h1 span:nth-child(13){ animation-delay:.6s; }
-h1 span:nth-child(14){ animation-delay:.65s; }
+#override h1 span:nth-child(2){ animation-delay:.05s; }
+#override h1 span:nth-child(3){ animation-delay:.1s; }
+#override h1 span:nth-child(4){ animation-delay:.15s; }
+#override h1 span:nth-child(5){ animation-delay:.2s; }
+#override h1 span:nth-child(6){ animation-delay:.25s; }
+#override h1 span:nth-child(7){ animation-delay:.3s; }
+#override h1 span:nth-child(8){ animation-delay:.35s; }
+#override h1 span:nth-child(9){ animation-delay:.4s; }
+#override h1 span:nth-child(10){ animation-delay:.45s; }
+#override h1 span:nth-child(11){ animation-delay:.5s; }
+#override h1 span:nth-child(12){ animation-delay:.55s; }
+#override h1 span:nth-child(13){ animation-delay:.6s; }
+#override h1 span:nth-child(14){ animation-delay:.65s; }
